--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
 
         <div class="card2">
           <!-- <div class="card2-container"> -->
-            <div class="name-container">
-              <img src="./asset/images/image-irene.jpg" alt="" />
-              <div class="person2">
-                <p class="name2">Irene Roberts</p>
-                <p class="verified">Verified Buyer</p>
-              </div>
+          <div class="name-container">
+            <img src="./asset/images/image-irene.jpg" alt="" />
+            <div class="person2">
+              <p class="name2">Irene Roberts</p>
+              <p class="verified">Verified Buyer</p>
             </div>
-            <p class="text-client">
-              "Customer service is always excellent and very quick turn around.
-              Completely delighted with the simplicity of the purchase and the
-              speed of delivery."
-            </p>
+          </div>
+          <p class="text-client">
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </p>
           <!-- </div> -->
         </div>
         <div class="card3">
@@ -132,13 +132,13 @@
         <!-- </div> -->
       </div>
       <!-- </div> -->
+      
     </div>
-
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by <a href="#">BcmDev20</a>.
+    </div>
   </body>
 </html>
